--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "orinoco-backend",
+  "name": "orinoco",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is the back end server for Project 5 of the Junior Web Developer path.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Emilien_Eyraud",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
@@ -16,5 +17,13 @@
     "mongoose": "^5.3.8",
     "mongoose-unique-validator": "^2.0.2",
     "uuid": "^3.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EmilienEyraud/projet5.git"
+  },
+  "bugs": {
+    "url": "https://github.com/EmilienEyraud/projet5/issues"
+  },
+  "homepage": "https://github.com/EmilienEyraud/projet5#readme"
 }
