--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "sass": "sass --watch ./sass/main.scss:./css/style.css",
     "prefix": "postcss ./css/style.css --use autoprefixer -d ./css/prefixed/",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "webpack",
     "start": "node server.js"
   },
@@ -15,10 +15,13 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
+    "mocha": "^8.2.1",
     "mongoose": "^5.3.8",
     "mongoose-unique-validator": "^2.0.2",
+    "request": "^2.88.2",
     "uuid": "^3.3.2"
   },
   "repository": {
